# cricket-realtime-app

./: .gitignore  CHANGELOG.md  README.md  commands.sh  cricket-realtime-app.generated.sln
.github/workflows/: pr-merged.yaml  tag-pushed.yaml
Components/: App.razor  _Imports.razor
Components/Layout/: NavMenu.razor
apps/: Makefile  docker-compose.yaml
apps/data/: Sources.md  clientConfig.json  download-unzip-rankings.sh  icc-api.sh
apps/frontend/: package.json  svelte.config.js  tailwind.config.js
apps/frontend-blazor/: Dockerfile  Program.cs  appsettings.json  frontend-blazor.csproj
apps/icc-scraper/: .env-example  fetch_parallel.sh  requirements.txt
apps/icc-service/: .env_example  Dockerfile  README.md  main.py  pyproject.toml  run-script.sh
apps/icc-service/icc_service/: main.py
apps/icc-service/icc_service/utils/: search.py  setup.py
apps/player-service/: run-script.sh
apps/score-service/: Dockerfile  pyproject.toml
apps/team-service/: .env  Dockerfile  pyproject.toml  run-script.sh
data/match/: 1239534.json  1239535.json  1239536.json  1239537.json  1239540.json  1239541.json  1247043.json  1247044.json  1249207.json  1249208.json  1249875.json  1250290.json  1250292.json  1250293.json  1250294.json  1250295.json  1250296.json  1250297.json  1250298.json  1250299.json  1250300.json  1250301.json  1250302.json  1250303.json  1250304.json  1250305.json  1250306.json  1250307.json  1250308.json  1250309.json  1250310.json  1250311.json  1250312.json  1250313.json  1250315.json  1250316.json  1250318.json  1250319.json  1250320.json  1250321.json  (+183 more)
data/matches/: 1144483.json  1144485.json  1144486.json  1144487.json  1144491.json  1144494.json  1144502.json  1144505.json  1144508.json  1144513.json  1144514.json  1144516.json  1144520.json  1144524.json  1144527.json  1144528.json  1384420.json  1384438.json  247458.json  247461.json  247462.json  247463.json  247468.json  247469.json  247476.json  247478.json  247479.json  247481.json  247483.json  247485.json  247487.json  247492.json  247495.json  247498.json  247500.json  247502.json  247504.json  247506.json  433560.json  433562.json  (+59 more)
frontend/: Dockerfile  package-lock.json  package.json
frontend-blazor/: Program.cs  appsettings.json  frontend-blazor.csproj
frontend-blazor/Components/: App.razor  _Imports.razor
frontend-blazor/Data/: DataHelper.cs
frontend-blazor/Models/: BallData.cs  Match.cs  MatchDetails.cs  MatchState.cs  PlayerDetails.cs  PlayerSearchModel.cs  Team.cs  WebsocketMessage.cs
frontend-blazor/Utils/: ParseWebsocketData.cs
frontend-blazor/wwwroot/: app.css
helm/: istio-docs.md  setup-istio.sh
player-service/: Dockerfile  pyproject.toml  run-script.sh
player-service/player_service/: main.py
player-service/player_service/paths/players/: main.py
player-service/player_service/utils/: search.py
score-service/: .env  Dockerfile  pyproject.toml  run-script.sh
score-service/score_service/: filter.py  main.py
score-service/score_service/models/: match.py
score-service/score_service/paths/match/: main.py
score-service/score_service/utils/: exports.py
team-service/: Dockerfile  README.md  pyproject.toml
team-service/team_service/: main.py
(+8552 files in other folders)
