[tool.poetry]
name = "player-service"
version = "0.1.0"
description = ""
authors = ["Ganesh Tiwari <ganesht049@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "player_service"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.104.1"}
pandas = "^2.1.3"


[tool.poetry.scripts]
start = "player_service.main:run_app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
