[tool.poetry]
name = "score-service"
version = "0.1.0"
description = ""
authors = ["Ganesh Tiwari <ganesht049@gmail.com>"]
readme = "README.md"
packages = [{include = "score_service"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
fastapi = {extras = ["api"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
websockets = "^12.0"

[tool.poetry.scripts]
start = "score_service.main:main"
filter = "score_service.filter:filter_files"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
